# sycophant

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: cflite_batch.yml  ci.yml  release.yml  scorecard.yml
charts/sycophant/: Chart.yaml  values.schema.json  values.yaml
charts/sycophant/crds/: airlockchamber.yaml  airlocktool.yaml  mainframe.yaml  tightbeamchannel.yaml  tightbeammodel.yaml
charts/sycophant/templates/: _helpers.tpl  airlock-bindings.yaml  airlock-chambers.yaml  airlock-controller.yaml  airlock-network-policies.yaml  airlock-rbac.yaml  airlock-tools.yaml  chart-admin-rbac.yaml  configmap.yaml  controller-network-policies.yaml  controller-rbac.yaml  controller.yaml  deployment.yaml  kyverno-policy.yaml  mainframe-bundled-s3.yaml  mainframe-controller-rbac.yaml  mainframe-controller.yaml  mainframe-cr.yaml  mainframe.yaml  networkpolicy.yaml  pkm-controller.yaml  pkm-network-policies.yaml  pkm-rbac.yaml  pvc.yaml  sandbox-vap.yaml  sandbox.yaml  scheduling-configmap.yaml  tightbeam-channels.yaml  tightbeam-models.yaml  tightbeam-providers.yaml  workspace-configmap.yaml  workspace-sa.yaml
charts/sycophant/templates/crds/: airlockchamber.yaml  mainframe.yaml  tightbeamchannel.yaml  tightbeammodel.yaml  tightbeamprovider.yaml
cli/: Cargo.toml
cli/src/: assets.rs  cli.rs  grpc.rs  main.rs  providers.rs  runner.rs  scope.rs  sync.rs  values.rs
cli/src/commands/: agent.rs  chat.rs  down.rs  init.rs  llm.rs  mcp.rs  mod.rs  model.rs  secret.rs  status.rs  up.rs  util.rs  workspace.rs
crates/airlock-controller/: Cargo.toml
crates/airlock-controller/examples/: gen_crd.rs
crates/airlock-controller/src/: auth.rs  crd.rs  grpc.rs  job.rs  keepalive.rs  lib.rs  main.rs  registry.rs  state.rs  watcher.rs
crates/airlock-controller/tests/: grpc_integration.rs
crates/airlock-proto/: Cargo.toml  build.rs
crates/airlock-proto/proto/airlock/v1/: airlock.proto
crates/airlock-proto/src/: lib.rs
crates/airlock-runtime/: Cargo.toml
crates/airlock-runtime/src/: execute.rs  lib.rs  main.rs  scrub.rs
crates/mainframe-controller/: Cargo.toml
crates/mainframe-controller/examples/: gen_crd.rs
crates/mainframe-controller/src/: crd.rs  lib.rs  main.rs  source.rs  state.rs  watcher.rs
crates/mainframe-runtime/: Cargo.toml  Dockerfile
crates/mainframe-runtime/src/: main.rs  server.rs
crates/pkm-controller/: Cargo.toml
crates/pkm-controller/src/: grpc.rs  lib.rs  main.rs  prompts.rs  router_response.rs  state.rs
crates/pkm-controller/tests/: grpc_integration.rs
crates/pkm-proto/: Cargo.toml  build.rs
crates/pkm-proto/proto/pkm/v1/: pkm.proto
crates/pkm-proto/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  lib.rs  scheduling.rs
crates/sycophant-auth/: Cargo.toml
crates/sycophant-auth/src/: lib.rs
crates/sycophant-scheduling/: Cargo.toml
crates/sycophant-scheduling/src/: lib.rs
crates/tightbeam-controller/: Cargo.toml
crates/tightbeam-controller/examples/: gen_crd.rs
crates/tightbeam-controller/src/: conversation.rs  crd.rs  grpc.rs  job.rs  lib.rs  main.rs  state.rs  watcher.rs
crates/tightbeam-controller/tests/: grpc_integration.rs
crates/tightbeam-llm-job/: Cargo.toml
crates/tightbeam-llm-job/src/: config.rs  main.rs
crates/tightbeam-proto/: Cargo.toml  build.rs
crates/tightbeam-proto/proto/tightbeam/v1/: tightbeam.proto
crates/tightbeam-proto/src/: convert.rs  lib.rs
crates/tightbeam-providers/: Cargo.toml
crates/tightbeam-providers/src/: claude.rs  gemini.rs  lib.rs  merge.rs  openai.rs  types.rs
crates/transponder/: Cargo.toml  Dockerfile
crates/transponder/src/: agent.rs  clients.rs  config.rs  discover.rs  main.rs  message_source.rs  prompt.rs  router.rs  runtime.rs  runtime_entrypoint.rs  tool_router.rs  transponder_tools.rs  turn.rs
crates/workspace-tools/: Cargo.toml  Dockerfile
crates/workspace-tools/src/: main.rs  server.rs  tools.rs
docs/: airlock.md  cli-e2e-test.md  e2e-test.md  mainframe.md  tightbeam.md
docs/e2e/: values.yaml
docs/e2e/agents/test-agent/: prompt.md
docs/e2e/fixtures/post-install/: airlock-ping.yaml  tightbeam-model.yaml
examples/agents/bob/: prompt.md
examples/agents/coder/: identity.md
examples/agents/hello-world/: prompt.md
examples/agents/planner/: identity.md
examples/agents/reviewer/: identity.md
examples/agents/safe-secrets/: prompt.md
examples/mainframe/orchestrator/: AGENTS.md  ENTRYPOINT.md
examples/mainframe/orchestrator/agents/alice/: system_prompt.md
examples/mainframe/simple/: AGENTS.md
examples/models/: anthropic-haiku.yaml  anthropic-opus.yaml  anthropic-sonnet.yaml  openai-gpt5.yaml
examples/prompts/hello-world/: prompt.md
examples/prompts/router/: prompt.md
examples/scenarios/hello-world/: README.md  values.yaml
examples/scenarios/multi-agent/: README.md  values.yaml
examples/scenarios/safe-secrets/: README.md  values.yaml
examples/scenarios/safe-secrets/fixtures/: demo-secret.yaml
examples/scenarios/ssh-secret/: Dockerfile  values.yaml
examples/scenarios/ssh-secret/fixtures/: demo-ssh-key.yaml
examples/workspaces/group-chat/: Dockerfile  values.yaml
examples/workspaces/hello-world/: values.yaml
images/git/: Dockerfile
