[workspace]
members = ["cli", "crates/workspace-tools", "crates/transponder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1"
async-trait = "0.1"
tokio-stream = "0.1"
tower = "0.5"

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
unused_self = "warn"
unnecessary_wraps = "warn"
