[workspace]
members = [
    "cli",
    "crates/tightbeam-controller",
    "crates/tightbeam-llm-job",
    "crates/tightbeam-proto",
    "crates/tightbeam-providers",
    "crates/transponder",
    "crates/workspace-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tightbeam-proto = { path = "crates/tightbeam-proto" }
tightbeam-providers = { path = "crates/tightbeam-providers" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
unused_self = "warn"
unnecessary_wraps = "warn"
