[workspace]
members = [
    "cli",
    "crates/airlock-controller",
    "crates/airlock-proto",
    "crates/airlock-runtime",
    "crates/mainframe-controller",
    "crates/mainframe-runtime",
    "crates/shared",
    "crates/tightbeam-controller",
    "crates/tightbeam-llm-job",
    "crates/tightbeam-proto",
    "crates/tightbeam-providers",
    "crates/transponder",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
airlock-proto = { path = "crates/airlock-proto" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["v1_32"] }
kube = { version = "3.1", features = ["runtime", "derive"] }
object_store = { version = "0.13", default-features = false }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
shared = { path = "crates/shared" }
serde_json = "1"
shell-words = "1"
tempfile = "3"
thiserror = "2"
tightbeam-proto = { path = "crates/tightbeam-proto" }
tightbeam-providers = { path = "crates/tightbeam-providers" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
unused_self = "warn"
unnecessary_wraps = "warn"
