[package]
name = "airlock-controller"
version.workspace = true
edition.workspace = true

[dependencies]
airlock-proto.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["net"] }

[lints]
workspace = true
