[package]
name = "pkm-controller"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pkm-controller"
path = "src/main.rs"

[dependencies]
futures.workspace = true
kube.workspace = true
pkm-proto.workspace = true
prost.workspace = true
serde_json.workspace = true
sycophant-auth.workspace = true
tightbeam-proto.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-stream = { workspace = true, features = ["net"] }

[lints]
workspace = true
