[package]
name = "tightbeam-controller"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tightbeam-controller"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
prost.workspace = true
schemars.workspace = true
serde.workspace = true
sha2 = "0.10"
serde_json.workspace = true
serde_yaml = "0.9"
shared.workspace = true
tightbeam-proto.workspace = true
tightbeam-providers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
tokio-stream = { workspace = true, features = ["net"] }

[lints]
workspace = true
