[package]
name = "tightbeam-llm-job"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tightbeam-llm-job"
path = "src/main.rs"

[dependencies]
futures.workspace = true
prost.workspace = true
serde_json.workspace = true
shared.workspace = true
tightbeam-proto.workspace = true
tightbeam-providers.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
