[package]
name = "tightbeam-proto"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
prost.workspace = true
serde_json.workspace = true
tightbeam-providers.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
