[package]
name = "transponder"
version.workspace = true
edition.workspace = true

[[bin]]
name = "transponder"
path = "src/main.rs"

[dependencies]
tightbeam-proto = { git = "https://github.com/calebfaruki/tightbeam.git", tag = "v0.10.0" }
airlock-proto = { git = "https://github.com/calebfaruki/airlock.git", tag = "v0.7.0" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
