[package]
name = "workspace-tools"
version.workspace = true
edition.workspace = true

[[bin]]
name = "workspace-tools"
path = "src/main.rs"

[dependencies]
airlock-proto = { git = "https://github.com/calebfaruki/airlock.git", tag = "v0.7.0" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
