[package]
name = "workspace-tools"
version.workspace = true
edition.workspace = true

[[bin]]
name = "workspace-tools"
path = "src/main.rs"

[dependencies]
airlock-proto = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
